# schema2code

./: .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TestEnumBundle.ts  __init__.py  build.sh  chat_completion_allowed_tools.py  chat_completion_allowed_tools_choice.py  chat_completion_function_call_option.py  chat_completion_functions.py  chat_completion_message_tool_calls.py  chat_completion_named_tool_choice.py  chat_completion_named_tool_choice_custom.py  chat_completion_request_assistant_message.py  chat_completion_request_developer_message.py  chat_completion_request_function_message.py  chat_completion_request_message.py  chat_completion_request_system_message.py  chat_completion_request_tool_message.py  chat_completion_request_user_message.py  chat_completion_stream_options.py  chat_completion_tool.py  chat_completion_tool_choice_option.py  chat_model.py  create_model_response_properties.py  custom_tool_chat_completions.py  function_object.py  function_parameters.py  install.sh  metadata.py  model_ids_shared.py  model_response_properties.py  openai_model_gen.sh  parallel_tool_calls.py  prediction_content.py  pyproject.toml  reasoning_effort.py  (+14 more)
.github/workflows/: ci.yml  release.yml
sample_code/dotnet/: AcronymApiRequest.cs  AcronymApiResponse.cs  AcronymUnion.cs  ActiveStatus.cs  AddUploadPartRequest.cs  AdminApiKey.cs  AnalysisDepth.cs  Annotation.cs  ApiKeyList.cs  ApplyPatchCallOutputStatus.cs  ApplyPatchCallOutputStatusParam.cs  ApplyPatchCallStatus.cs  ApplyPatchCallStatusParam.cs  ApplyPatchCreateFileOperation.cs  ApplyPatchCreateFileOperationParam.cs  ApplyPatchDeleteFileOperation.cs  ApplyPatchDeleteFileOperationParam.cs  ApplyPatchOperationParam.cs  ApplyPatchToolCall.cs  ApplyPatchToolCallItemParam.cs  ApplyPatchToolCallOutput.cs  (+978 more)
sample_schemas/: acronym_api_request.yaml  acronym_api_response.yaml  acronym_union.yaml  apply_patch_call_status.yaml  apply_patch_create_file_operation.yaml  apply_patch_delete_file_operation.yaml  apply_patch_tool_call.yaml  apply_patch_tool_call_item_param.yaml  apply_patch_tool_call_output_item_param.yaml  apply_patch_tool_param.yaml  apply_patch_update_file_operation.yaml  available_tool.yaml  batch.yaml  batch_error.yaml  batch_request_output.yaml  chat_message_metadata.yaml  chat_req.yaml  chat_request.yaml  chat_response.yaml  chat_socket_command.yaml  chat_socket_type.yaml  config.yaml  conversation-2.yaml  conversation.yaml  conversation_ctx.yaml  create_research_request.yaml  dataclass_example.yaml  deduplication_result.yaml  dynamic_tool.yaml  enum_bundle.yaml  format_test.yaml  gpu_config.yaml  image_generation_notification.yaml  inference_queue_message.yaml  intent_analysis.yaml  lang_chain_message.yaml  map_example.yaml  memory_config.yaml  memory_fragment.yaml  memory_source.yaml  (+26 more)
schema2code/: __init__.py  main.py
scripts/: build.sh  release.sh
src/: __init__.py  __version__.py  main.py  py.typed
tests/: conftest.py  test_acronym_type_names.py  test_cli_and_errors.py  test_csharp_generator.py  test_generator_fixes.py  test_go_generator.py  test_go_import_formats.py  test_openapi.py  test_proto_generator.py  test_proto_maps.py  test_python_dataclass_generator.py  test_python_generator.py  test_typescript_enums.py  test_typescript_generator.py
(+6586 files in other folders)
